# tide

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  start.bat
.github/workflows/: ci.yml
applications/: README.md
applications/invoicing/: README.md  actions.py  demo_data.py  fake_data.py  runtime.py  tide.yaml
applications/invoicing/presentation/: defaults.yaml  formats.yaml  presets.yaml
applications/invoicing/security/: policies.yaml
docs/: AI-APPLICATION-GENERATION.md  AI-GENERATION-TUTORIAL.md  API-AND-MCP.md  API-CLIENT-TUTORIAL.md  APPLICATION-MODEL.md  ARCHITECTURE.md  AUDIT-AND-IDEMPOTENCY.md  COMPILATION-AND-LAYOUT.md  CURSOR-STORAGE.md  DECISIONS.md  DESIGNERS-AND-REPORTING.md  DOCUMENTATION-PLAN.md  EXPRESSIONS-AND-VALIDATION.md  FIRST-APPLICATION.md  GETTING-STARTED.md  HEADLESS-RUNTIME.md  INVOICING-WALKTHROUGH.md  LEGACY-DATABASES.md  METADATA-V0.md  MIGRATIONS.md  OPERATIONS.md  PRESENTATION.md  QT-GUI.md  QUERY-AND-CONCURRENCY.md  README.md  ROADMAP.md  SECURITY.md  SQL-SERVER.md  TERMINAL-COMPATIBILITY.md  THREAT-MODEL.md  VISION.md  WINDOWS-QUICKSTART.md
docs/examples/first-application/: tide.yaml
examples/: __init__.py  invoicing_api_client.py
examples/ai_generation/: codex-mcp-config.toml  xy_invoicing_plan.json
src/tide/: __init__.py  __main__.py  cli.py  diagnostics.py  observability.py
src/tide/api/: __init__.py  auth.py  client.py  config.py  contracts.py  inputs.py  openapi.py  remote.py  server.py  wire.py
src/tide/compiler/: __init__.py  compiler.py  expressions.py  normalized.py  source.py
src/tide/data/: __init__.py  backup.py  memory.py  migrations.py  repository.py  revision_sql.py  revisions.py  sql_expressions.py  sqlalchemy.py  sqlalchemy_actions.py  sqlalchemy_cursors.py
src/tide/development/: __init__.py  application_apply.py  designer.py  designer_recovery.py  designer_save.py  designer_transaction.py  generation.py  materialization.py  project.py  seed.py  studio.py
src/tide/mcp/: __init__.py  contracts.py  developer.py  runtime.py  server.py
src/tide/model/: __init__.py  source.py
src/tide/qt/: __init__.py  app.py  presenter.py
src/tide/reporting/: __init__.py  csv.py  document.py  html.py  pdf.py  service.py
src/tide/runtime/: __init__.py  application.py  context.py  errors.py
src/tide/security/: __init__.py  engine.py
src/tide/tui/: __init__.py  (+11 more)
tests/: test_action_store.py  test_ai_generation_tutorial.py  test_api_auth.py  test_api_client.py  test_api_config.py  test_api_remote.py  test_api_server.py  test_api_tutorial.py  test_application_apply.py  test_cli.py  test_compiler.py  test_cursor_store.py  test_cursors.py  test_database_backup.py  test_designer.py  test_designer_save.py  test_developer_generation.py  test_developer_mcp.py  test_documentation.py  test_expressions.py  test_invoicing_action.py  test_mcp_runtime.py  test_mcp_server.py  test_migration_metadata.py  test_migrations.py  test_observability.py  test_openapi.py  test_pagination.py  test_qt.py  test_qt_widgets.py  test_relationship_security.py  test_reporting.py  test_revisions.py  test_runtime.py  test_sql_expressions.py  test_sqlalchemy_repository.py  test_sqlserver_dialect.py  test_sqlserver_integration.py  test_studio.py  test_tui.py  (+1 more)
(+53 files in other folders)
