[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "tide-framework"
version = "0.1.0"
description = "Terminal Integrated Data Environment"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10,<3",
    "PyYAML>=6.0.2,<7",
    "SQLAlchemy>=2.0,<3",
]

[project.optional-dependencies]
sqlserver = [
    "pyodbc>=5.3,<6",
]
dev = [
    "build>=1.2,<1.5.1",
    "pytest>=8.3,<10",
    "ruff>=0.15,<1",
]

[project.scripts]
tide = "tide.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tide"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "sqlserver: requires an explicitly configured SQL Server integration database",
]

[tool.coverage.run]
source = ["tide"]

[tool.ruff]
target-version = "py311"
