[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "tide-framework"
version = "0.1.0"
description = "Terminal Integrated Data Environment"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10,<3",
    "PyYAML>=6.0.2,<7",
    "ruamel.yaml>=0.18.10,<0.19",
    "SQLAlchemy>=2.0,<3",
]

[project.optional-dependencies]
migration = [
    "alembic>=1.18.5,<2",
]
tui = [
    "textual>=8.2,<9",
]
studio = [
    "textual[syntax]>=8.2,<9",
]
sqlserver = [
    "pyodbc>=5.3,<6",
]
seed = [
    "Faker>=37.4,<38",
]
report = [
    "reportlab>=4.4,<5",
]
api = [
    "fastapi>=0.116,<1",
    "uvicorn[standard]>=0.35,<1",
]
client = [
    "httpx>=0.28,<1",
]
mcp = [
    "mcp>=1.28,<2",
]
auth = [
    "httpx>=0.28,<1",
    "PyJWT[crypto]>=2.10,<3",
]
dev = [
    "alembic>=1.18.5,<2",
    "build>=1.2,<1.5.1",
    "fastapi>=0.116,<1",
    "Faker>=37.4,<38",
    "httpx>=0.28,<1",
    "mcp>=1.28,<2",
    "PyJWT[crypto]>=2.10,<3",
    "pytest>=8.3,<10",
    "reportlab>=4.4,<5",
    "ruff>=0.15,<1",
    "textual[syntax]>=8.2,<9",
    "uvicorn[standard]>=0.35,<1",
]

[project.scripts]
tide = "tide.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tide"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "sqlserver: requires an explicitly configured SQL Server integration database",
]

[tool.coverage.run]
source = ["tide"]

[tool.ruff]
target-version = "py311"
